@@ -1,4 +1,3 @@
-
 package Controllers;
 
 import Classes.*;
@@ -41,35 +40,26 @@ public class CreateBoController {
 
     private UserAccount orthophoniste = AccountManager.getCurrentuser();
     private Set<Test> mestests = orthophoniste.getMes_tests();
-    ObservableList<Test> testObservableList = convertSetToObservableList(mestests);
-    private static Map<Test, CompteRendu> testScores = new HashMap<>();
+    private ObservableList<Test> testObservableList = convertSetToObservableList(mestests);
+    private static final Map<Test, CompteRendu> testScores = new HashMap<>();
 
     private Set<Question> createDummyQuestions() {
         Set<Question> questions = new HashSet<>();
-
-        QuestionQCM question1 = new QuestionQCM("Q1", "Question 1: What is 2 + 2?", new ArrayList<>(List.of("3", "4", "5")));
-        QuestionQCU question2 = new QuestionQCU("Q2", "Question 2: What is the capital of France?", new ArrayList<>(List.of("Paris", "Berlin", "London")));
-
-        questions.add(question1);
-        questions.add(question2);
-
+        questions.add(new QuestionQCM("Q1", "Question 1: What rhymes with cat?", new ArrayList<>(Arrays.asList("Bat", "Dog", "Hat"))));
+        questions.add(new QuestionQCU("Q2", "Question 2: How many syllables are there in the word Butterfly?", new ArrayList<>(Arrays.asList("1", "2", "3", "4"))));
         return questions;
     }
 
+
     private Set<Exercice> createDummyExercices() {
         Set<Exercice> exercices = new HashSet<>();
-
-        Exercice exercice1 = new Exercice("E1", "Exercice 1: Solve the following equation", new HashSet<>(Set.of("Equation 1", "Equation 2")));
-        Exercice exercice2 = new Exercice("E2", "Exercice 2: Write a short paragraph about your favorite hobby", new HashSet<>(Set.of("Paragraph task")));
-
-        exercices.add(exercice1);
-        exercices.add(exercice2);
-
+        exercices.add(new Exercice("E1", "Exercice 1: Solve the following equation", new HashSet<>(Set.of("Equation 1", "Equation 2"))));
+        exercices.add(new Exercice("E2", "Exercice 2: Write a short paragraph about your favorite hobby", new HashSet<>(Set.of("Paragraph task"))));
         return exercices;
     }
 
     private final Set<Test> selectedTests = new HashSet<>();
-    ObservableList<Test> selectedTestsList = convertSetToObservableList(selectedTests);
+    private final ObservableList<Test> selectedTestsList = convertSetToObservableList(selectedTests);
     private Dossier dossier;
     private Patient patient;
     private Integer testScore;
@@ -84,59 +74,44 @@ public class CreateBoController {
 
     public void setDossier(Dossier dossier) {
         this.dossier = dossier;
-
     }
 
-    private SharedScoreDataModel sharedDataModel = SharedScoreDataModel.getInstance();
+    private final SharedScoreDataModel sharedDataModel = SharedScoreDataModel.getInstance();
 
     @FXML
     private void initialize() {
         if (dossier != null) {
             initializeDossierData();
         }
+
         Map<Test, Integer> rawTestScores = sharedDataModel.getTestScores();
-        for (Map.Entry<Test, Integer> entry : rawTestScores.entrySet()) {
-            testScores.put(entry.getKey(), new CompteRendu(entry.getValue(), "", entry.getKey()));
-        }
-        System.out.println("testScores map after initialization: " + testScores);
-        troublesListView.setCellFactory(new Callback<>() {
-            @Override
-            public ListCell<Trouble> call(ListView<Trouble> troubleListView) {
-                return new TroubleListCell();
-            }
-        });
+        rawTestScores.forEach((test, score) -> testScores.put(test, new CompteRendu(score, "", test)));
+
+        troublesListView.setCellFactory(troubleListView -> new TroubleListCell());
         troublesListView.setItems(troubles);
         troublesListView.setPlaceholder(new Label("No current troubles, please create a new one"));
 
-        testsListView.setCellFactory(new Callback<>() {
-            @Override
-            public ListCell<Test> call(ListView<Test> testListView) {
-                return new TestListCell();
-            }
-        });
-
+        testsListView.setCellFactory(testListView -> new TestListCell());
         testsListView.setItems(testObservableList);
         testsListView.getSelectionModel().setSelectionMode(SelectionMode.MULTIPLE);
 
         initializeConfirmButton();
+
         TestQuestionnaire test1 = new TestQuestionnaire("Test 1", "Test capacity 1", createDummyQuestions());
         TestExercice test2 = new TestExercice("Test 2", "Test capacity 2", createDummyExercices());
-
         testObservableList.addAll(test1, test2);
+
         testsListView.getSelectionModel().selectedItemProperty().addListener((observable, oldValue, newValue) -> {
             if (newValue != null) {
                 loadTestDetails(newValue);
             }
         });
+
         System.out.println("CreateBoController initialized with dossier: " + dossier);
     }
-        private void loadTestDetails(Test test) {
-        String fxmlFile = "";
-        if (test instanceof TestQuestionnaire) {
-            fxmlFile = "../Layouts/GradeTestQuestionnaire.fxml";
-        } else if (test instanceof TestExercice) {
-            fxmlFile = "../Layouts/GradeTestExercice.fxml";
-        }
+
+    private void loadTestDetails(Test test) {
+        String fxmlFile = (test instanceof TestQuestionnaire) ? "../Layouts/GradeTestQuestionnaire.fxml" : "../Layouts/GradeTestExercice.fxml";
 
         FXMLLoader loader = new FXMLLoader(getClass().getResource(fxmlFile));
         try {
@@ -152,12 +127,10 @@ public class CreateBoController {
                 controller.setTest((TestQuestionnaire) test);
             } else if (test instanceof TestExercice) {
                 GradeTestExerciceController controller = loader.getController();
-
                 controller.setSelectedTests(selectedTests);
                 controller.setTroubles(troubles);
                 controller.setProjetThField(projetThField.getText());
                 controller.setDossierAndPatient(dossier, patient);
-
                 controller.setTest((TestExercice) test);
             }
 
@@ -165,12 +138,13 @@ public class CreateBoController {
             e.printStackTrace();
         }
     }
+
     private void initializeDossierData() {
         if (dossier != null) {
-
             System.out.println("Dossier data initialized: " + dossier);
         }
     }
+
     private void initializeConfirmButton() {
         confirmButton.setOnAction(event -> {
             selectedTests.clear();
@@ -179,48 +153,35 @@ public class CreateBoController {
                     selectedTests.add(test);
                 }
             }
-            selectedTestsList.clear();
-            selectedTestsList.addAll(selectedTests);
-
+            selectedTestsList.setAll(selectedTests);
             testsListView.setItems(selectedTestsList);
             System.out.println("Selected tests: " + selectedTests.stream().map(Test::getNom).collect(Collectors.joining(", ")));
         });
-
     }
-    public void addTestScore(String testName, int totalScore) {
-//        Test testToUpdate = mestests.stream()
-//                .filter(test -> test.getNom().equals(testName))
-//                .findFirst()
-//                .orElse(null);
-//
-//        if (testToUpdate != null) {
-//            CompteRendu compteRendu = new CompteRendu(totalScore, "", testToUpdate);
-//            testScores.put(testToUpdate, compteRendu);
-//        } else {
-//            testToUpdate = mestests.stream()
-//                    .filter(test -> test.getNom().contains(testName))
-//                    .findFirst()
-//                    .orElse(null);
-//
-//            if (testToUpdate != null) {
-//                CompteRendu compteRendu = new CompteRendu(totalScore, "", testToUpdate);
-//                testScores.put(testToUpdate, compteRendu);
-//            } else {
-//                System.out.println("Test with name '" + testName + "' not found.");
-//            }
-//        }
-        Test testToUpdate = new TestQuestionnaire("Test 1", "Test capacity 1", createDummyQuestions());
 
-        CompteRendu compteRendu = new CompteRendu(totalScore, "", testToUpdate);
-        testScores.put(testToUpdate, compteRendu);
+    public void addTestScore(String testName, int totalScore) {
+        Test testToUpdate = mestests.stream()
+                .filter(test -> test.getNom().equals(testName))
+                .findFirst()
+                .orElseGet(() -> mestests.stream()
+                        .filter(test -> test.getNom().contains(testName))
+                        .findFirst()
+                        .orElse(null));
+
+        if (testToUpdate != null) {
+            CompteRendu compteRendu = new CompteRendu(totalScore, "", testToUpdate);
+            testScores.put(testToUpdate, compteRendu);
+        } else {
+            System.out.println("Test with name '" + testName + "' not found.");
+        }
     }
 
     public void setTestsAndTroubles(Set<Test> tests, List<Trouble> troubles) {
         selectedTests.addAll(tests);
-        selectedTestsList.addAll(selectedTests);
+        selectedTestsList.setAll(selectedTests);
         testsListView.setItems(selectedTestsList);
 
-        this.troubles.addAll(troubles);
+        this.troubles.setAll(troubles);
         troublesListView.setItems(this.troubles);
     }
 
@@ -239,6 +200,7 @@ public class CreateBoController {
             e.printStackTrace();
         }
         dialog.getDialogPane().getButtonTypes().addAll(ButtonType.OK, ButtonType.CANCEL);
+
         AddTroubleController controller = loader.getController();
         dialog.setResultConverter(dialogButton -> {
             if (dialogButton == ButtonType.OK) {
@@ -253,13 +215,11 @@ public class CreateBoController {
         dialog.showAndWait();
     }
 
-
-
     static class TestListCell extends ListCell<Test> {
-        private HBox hBox = new HBox();
-        private CheckBox checkBox = new CheckBox();
-        private Label testNameLabel = new Label();
-        private Label testScoreLabel = new Label();
+        private final HBox hBox = new HBox();
+        private final CheckBox checkBox = new CheckBox();
+        private final Label testNameLabel = new Label();
+        private final Label testScoreLabel = new Label();
 
         public TestListCell() {
             super();
@@ -295,24 +255,21 @@ public class CreateBoController {
         }
     }
 
-
     static class TroubleListCell extends ListCell<Trouble> {
-        private HBox hBox = new HBox();
-        private Label troubleNameLabel = new Label();
-        private Label troubleTypeLabel = new Label();
+        private final HBox hBox = new HBox();
+        private final Label troubleNameLabel = new Label();
+        private final Label troubleTypeLabel = new Label();
 
         public TroubleListCell() {
             super();
             hBox.setSpacing(10);
             troubleNameLabel.setPrefWidth(190);
             troubleTypeLabel.setPrefWidth(190);
-
             Font customFont = Font.font("Arial", FontWeight.BOLD, 14);
             troubleNameLabel.setFont(customFont);
             troubleTypeLabel.setFont(customFont);
             HBox.setHgrow(troubleNameLabel, Priority.ALWAYS);
             HBox.setHgrow(troubleTypeLabel, Priority.ALWAYS);
-
             hBox.getChildren().addAll(troubleNameLabel, troubleTypeLabel);
             hBox.setPadding(new Insets(10, 10, 15, 7));
         }
@@ -331,7 +288,7 @@ public class CreateBoController {
         }
     }
 
-        @FXML
+    @FXML
     private void addBilan() {
         BilanO bilanO = new BilanO();
         String projetThName = projetThField.getText();
@@ -339,17 +296,12 @@ public class CreateBoController {
         bilanO.setProjet(projetTh);
 
         Diagnostic diagnostic = new Diagnostic();
-        diagnostic.setTroubles(getTroubles().toArray(new Trouble[0])); // Convert list to array
+        diagnostic.setTroubles(new ArrayList<>(troubles)); // Convert ObservableList to ArrayList
         bilanO.setDiagnostique(diagnostic);
 
-       bilanO.setTests(selectedTests);
+        bilanO.setTests(selectedTests);
 
         dossier.ajouterBO(bilanO);
         orthophoniste.ajouterBilan(dossier, bilanO);
-
-
-    }
-        public List<Trouble> getTroubles() {
-        return troubles;
     }
 }
